# CorridorKey-Runtime

./: .clang-format  .clang-tidy  .editorconfig  .gitattributes  .gitignore  .mise.toml  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile.nvidia  LICENSE  PLAN.md  PLAN_Torch-TensorRT.md  README.md  SECURITY.md  build_log.txt  build_ofx_temp.ps1  corridorkey.ps1  deploy.bat  docker-compose.yml  install_plugin.bat  release_notes.md  test_load_ofx.py  vcpkg-configuration.json  vcpkg.json
src/: CMakeLists.txt
src/app/: CMakeLists.txt  hardware_profile.hpp  job_orchestrator.cpp  job_orchestrator.hpp  model_compiler.cpp  model_compiler.hpp  ofx_runtime_protocol.cpp  ofx_runtime_protocol.hpp  ofx_runtime_service.cpp  ofx_runtime_service.hpp  ofx_session_broker.cpp  ofx_session_broker.hpp  ofx_session_policy.hpp  output_path_utils.hpp  runtime_contracts.cpp  runtime_contracts.hpp  runtime_contracts_probes.cpp  runtime_diagnostics.cpp  runtime_diagnostics.hpp  version_check.cpp  version_check.hpp
src/cli/: CMakeLists.txt  device_selection.hpp  execution_defaults.hpp  main.cpp  process_paths.hpp
src/common/: accelerate_utils.hpp  fp16_convert.hpp  hardware_telemetry.hpp  host_memory.cpp  host_memory.hpp  json_utils.hpp  local_ipc.cpp  local_ipc.hpp  ofx_runtime_defaults.hpp  parallel_for.hpp  runtime_paths.hpp  shared_memory_transport.cpp  shared_memory_transport.hpp  srgb_lut.hpp  stage_profiler.hpp
src/core/: CMakeLists.txt  coarse_to_fine_policy.hpp  device_detection.cpp  engine.cpp  engine_internal.hpp  gpu_prep.cpp  gpu_prep.hpp  gpu_resize.cpp  gpu_resize.hpp  inference_output_validation.hpp  inference_session.cpp  inference_session.hpp  inference_session_metadata.hpp  linux_cuda_probe.cpp  linux_cuda_probe.hpp  metal_memory_probe.hpp  metal_memory_probe.mm  mlx_memory_governor.cpp  mlx_memory_governor.hpp  mlx_probe.cpp  mlx_probe.hpp  mlx_session.cpp  mlx_session.hpp  model_input_normalization.hpp  npp_stream_context.hpp  ort_process_context.cpp  ort_process_context.hpp  perf_utils.hpp  pinned_buffer.hpp  pipeline_strategy.hpp  postprocess_policy.hpp  session_cache_policy.hpp  session_policy.hpp  tile_blend.hpp  torch_trt_loader.cpp  torch_trt_loader.hpp  torch_trt_session.cpp  torch_trt_session.hpp  warmup_policy.hpp  windows_rtx_probe.cpp  (+2 more)
src/frame_io/: CMakeLists.txt  exr_io.cpp  exr_io.hpp  frame_io.cpp  png_io.cpp  png_io.hpp  video_io.cpp  video_io.hpp
src/gui/: package.json  pnpm-lock.yaml  vite.config.ts
src/gui/src-tauri/: Cargo.toml  tauri.conf.json
src/post_process/: CMakeLists.txt  alpha_edge.cpp  alpha_edge.hpp  color_utils.cpp  color_utils.hpp  despeckle.cpp  despeckle.hpp  despill.cpp  despill.hpp  restore_source.cpp  restore_source.hpp  source_passthrough.cpp  source_passthrough.hpp
tests/: CMakeLists.txt  test_model_artifact_utils.hpp
tests/e2e/: CMakeLists.txt  test_cli_flags.cpp  test_full_pipeline.cpp  test_ofx_nuke_smoke.py
tests/gpu/: CMakeLists.txt  test_gpu_prep.cpp  test_gpu_resize.cpp
tests/integration/: CMakeLists.txt  ofx_benchmark_harness.cpp  ofx_rpc_benchmark_harness.cpp  ofx_runtime_test_quick_exit.cpp  run_optional_torchtrt_runner.cmake  test_cache_fallback.cpp  test_doctor_report.cpp  test_engine_fallback_policy.cpp  test_engine_mlx.cpp  test_engine_tiling.cpp  test_engine_torch_trt.cpp  test_engine_warmup.cpp  test_exr_roundtrip.cpp  test_job_orchestrator.cpp  test_macos_runtime_qos_regression.py  test_mlx_probe.cpp  test_ofx_plugin_exceptions.cpp  test_ofx_runtime_client.cpp  test_ofx_runtime_service.cpp  test_ofx_session_broker.cpp  test_png_roundtrip.cpp  test_post_process_chain.cpp  test_regression_0000_video_decode_bframes.cpp  test_screen_color_canonicalization.cpp  test_shared_memory_transport.cpp  test_video_roundtrip.cpp  test_windows_gpu_detection.cpp
tests/regression/: CMakeLists.txt  test_package_collaborator_artifacts_windows.ps1  test_placeholder.cpp  test_regression_0056_bundle_vcruntime.cpp  test_regression_dml_provider.cpp  test_regression_hardware_providers.cpp  test_regression_path_b_quality_loop.cpp  test_windows_doctor_missing_model_tolerance.ps1  test_windows_ort_root_validation.ps1  test_windows_rtx_artifact_manifest.ps1  test_windows_toolchain_resolution.ps1
tests/unit/: CMakeLists.txt  test_alpha_edge.cpp  test_coarse_to_fine_policy.cpp  test_color_utils.cpp  test_despeckle.cpp  test_despill.cpp  test_device_detection.cpp  test_device_selection.cpp  test_execution_defaults.cpp  test_fp16_convert.cpp  test_gpu_prep.cpp  test_gpu_resize.cpp  test_inference_postprocess_policy.cpp  test_inference_session.cpp  test_job_orchestrator.cpp  test_json_utils.cpp  test_local_ipc.cpp  test_model_artifacts.cpp  test_model_input_normalization.cpp  test_ofx_backend_matching.cpp  test_ofx_color_management.cpp  test_ofx_frame_cache.cpp  test_ofx_help_routing.cpp  test_ofx_host_detection.cpp  test_ofx_image_utils.cpp  test_ofx_lifecycle.cpp  test_ofx_model_selection.cpp  test_ofx_output_modes.cpp  test_ofx_runtime_client.cpp  test_ofx_runtime_panel.cpp  test_ofx_runtime_protocol.cpp  test_ofx_screen_color.cpp  test_ofx_session_policy.cpp  test_ofx_stubs.cpp  test_ort_process_context.cpp  test_output_path_utils.cpp  test_pinned_buffer.cpp  test_process_paths.cpp  test_runtime_contracts.cpp  test_runtime_diagnostics.cpp  (+8 more)
tools/coreml_student/: PHASE1_STATE.md  README.md  pyproject.toml
tools/model_exporter/: README.md  export_onnx.py  export_windows_rtx_onnx.py  export_windows_rtx_torchtrt.py  int8_decision_program.py  int8_visual_corpus_template.json  optimize_model.py  prepare_windows_rtx_backend_artifacts.py  pyproject.toml  quantize_model.py  test_export_windows_rtx_onnx.py  test_export_windows_rtx_torchtrt.py  test_int8_decision_program.py  test_prepare_windows_rtx_backend_artifacts.py  validate_export_parity.py  validate_model_pack.py  windows_rtx_deploy_profiles.json
tools/torchtrt_compiler/: README.md  compile_dynamic_torchscript.py  compile_torchtrt.py  pyproject.toml
tools/torchtrt_runner/: CMakeLists.txt  main.cpp
(+418 files in other folders)
